--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -129,12 +129,22 @@
             display: flex;
             flex-flow: wrap;
             flex-direction: row;
+            max-width: 100%;
 
             .pd-tabs-1-panels-card-txt {
                 flex: 0 0 50%;
-                div {
-                    display: flex;
+                max-width: 50%;
+                display: block;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                hyphens: auto;
+                p {
+                    word-wrap: break-word; 
+                    overflow-wrap: break-word; 
+                    max-width: 100%;
+                    white-space: normal!important;
                 }
+               
             }
 
             .pd-tabs-1-panels-card-img-outer {
