--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -74,6 +74,8 @@
     .pd-tabs-1-timeline-outer {
         min-height: 300px;
         width: 40px;
+        max-width: 40px;
+        flex: 0 0 40px;
         background: $gray-100;
         display: flex;
         flex-direction: row;
@@ -88,6 +90,7 @@
 
     .pd-tabs-1-panels-outer {
         flex: 1 0 auto;
+        max-width: 94%;
         min-height: 300px;
         background: #f2f2f2;
     }
@@ -134,6 +137,8 @@
             .pd-tabs-1-panels-card-txt {
                 flex: 0 0 50%;
                 max-width: 50%;
+                width: 50%;
+                box-sizing: border-box; 
                 display: block;
                 overflow-wrap: break-word;
                 word-wrap: break-word;
@@ -142,6 +147,8 @@
                     word-wrap: break-word; 
                     overflow-wrap: break-word; 
                     max-width: 100%;
+                    width: 100%;
+                    box-sizing: border-box; 
                     white-space: normal!important;
                 }
                
