--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -71,6 +71,7 @@
     display: flex;
     flex-direction: row;
 
+    // left col
     .pd-tabs-1-timeline-outer {
         min-height: 300px;
         width: 40px;
@@ -88,21 +89,30 @@
         }
     }
 
+    // right col
     .pd-tabs-1-panels-outer {
         flex: 1 0 auto;
-        max-width: 94%;
+        @media screen and (max-width: 767px) {
+            max-width: 88%;
+
+        }
+
+        @media (min-width: 768px) {
+            max-width: 93%;
+        }
+        
         min-height: 300px;
         background: #f2f2f2;
     }
 
     .pd-tabs-1-panels-card {
-        padding-left: 10px;
 
         header {
             position: relative;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            padding-left: 10px;
 
             a {
                 text-decoration: none;
@@ -111,14 +121,21 @@
                 h2,
                 h3,
                 h4 {
-                    font-size: 1.4rem;
+                    font-size: 1.2rem;
                 }
             }
 
             .pd-tabs-1-panels-card-icon {
                 position: absolute;
-                left: -50px;
-                top: -14px;
+                left: -41px;
+                top: -16px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                padding: 6px;
+                border-radius: 50%;
+                background: #44687E;
             }
 
             button {
@@ -129,40 +146,76 @@
 
         .pd-tabs-1-panels-card-body {
             padding-top: 20px;
-            display: flex;
-            flex-flow: wrap;
-            flex-direction: row;
             max-width: 100%;
-
-            .pd-tabs-1-panels-card-txt {
-                flex: 0 0 50%;
-                max-width: 50%;
-                width: 50%;
-                box-sizing: border-box; 
+            @media screen and (max-width: 767px) {
                 display: block;
-                overflow-wrap: break-word;
-                word-wrap: break-word;
-                hyphens: auto;
+            
+            }
+
+            @media (min-width: 768px) {
+                display: flex;
+                flex-direction: row;
+            }
+
+            // left col
+            .pd-tabs-1-panels-card-txt {
+                padding-left: 10px;
+                padding-bottom: 20px;
+
+                @media (min-width: 768px) {
+                    flex: 0 0 65%;
+                    max-width: 65%;
+                    order: 1;
+                    padding-right: 20px;
+                }
+                
+                line-height: 2;
+
                 p {
-                    word-wrap: break-word; 
-                    overflow-wrap: break-word; 
                     max-width: 100%;
                     width: 100%;
-                    box-sizing: border-box; 
-                    white-space: normal!important;
+                    color: $gray-600;
+                    
                 }
-               
             }
 
+            // right col
             .pd-tabs-1-panels-card-img-outer {
-                max-width: 50%;
-                flex: 0 0 50%;
-                padding: 10px;
+                @media screen and (max-width: 767px) {
+                    padding-bottom: 20px;
+                    padding-left: 10px;
+                }
+                @media (min-width: 768px) {
+                    flex: 0 0 35%;
+                    max-width: 35%;
+                    order: 2;
+                    padding: 10px;
+
+                }
+
                 img {
                     width: 100%;
-
                 }
             }
+
+            
+        }
+
+        // footer
+        .pd-tabs-1-panels-card-footnote {
+            font-size: 0.8rem;
+            font-weight: 600;
+            font-style: italic;
+            padding-bottom: 10px;
+
+            .pd-tabs-1-panels-card-footnote-label {
+                p {
+                    border-bottom: 3px solid #44687E; 
+                    padding-bottom: 6px;
+                }
+                padding-right: 8px;
+            }
+
         }
     }
 }
