--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -73,11 +73,10 @@
 
     // left col
     .pd-tabs-1-timeline-outer {
-        min-height: 300px;
+        min-height: 100px;
         width: 40px;
         max-width: 40px;
         flex: 0 0 40px;
-        background: $gray-100;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -101,12 +100,12 @@
             max-width: 93%;
         }
         
-        min-height: 300px;
-        background: #f2f2f2;
+        // min-height: 300px;
+        // background: #f2f2f2;
     }
 
     .pd-tabs-1-panels-card {
-
+        margin-bottom: 16px;
         header {
             position: relative;
             display: flex;
@@ -122,12 +121,13 @@
                 h3,
                 h4 {
                     font-size: 1.2rem;
+                    line-height: 1.8;
                 }
             }
 
             .pd-tabs-1-panels-card-icon {
                 position: absolute;
-                left: -41px;
+                left: -38px;
                 top: -16px;
                 display: flex;
                 flex-direction: row;
@@ -138,9 +138,22 @@
                 background: #44687E;
             }
 
+            .pd-tabs-1-panels-card-circle {
+                position: absolute;
+                left: -25px;
+                top: 10px;
+                width: 10px;
+                height: 10px;
+                background: #44687E;
+                border-radius: 50%;
+                opacity: 20%;
+
+            }
+
             button {
                 border: none;
                 margin-right: 10px;
+                background: transparent;
             }
         }
 
@@ -216,6 +229,10 @@
                 padding-right: 8px;
             }
 
+        }
+
+        hr {
+            margin-bottom: 40px;
         }
     }
 }
