--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -91,21 +91,22 @@
     // right col
     .pd-tabs-1-panels-outer {
         flex: 1 0 auto;
+
         @media screen and (max-width: 767px) {
             max-width: 88%;
-
         }
 
         @media (min-width: 768px) {
             max-width: 93%;
         }
-        
+
         // min-height: 300px;
         // background: #f2f2f2;
     }
 
     .pd-tabs-1-panels-card {
         margin-bottom: 16px;
+
         header {
             position: relative;
             display: flex;
@@ -146,7 +147,6 @@
                 height: 10px;
                 background: #44687E;
                 border-radius: 50%;
-
             }
 
             button {
@@ -159,9 +159,9 @@
         .pd-tabs-1-panels-card-body {
             padding-top: 20px;
             max-width: 100%;
+
             @media screen and (max-width: 767px) {
                 display: block;
-            
             }
 
             @media (min-width: 768px) {
@@ -180,14 +180,13 @@
                     order: 1;
                     padding-right: 20px;
                 }
-                
+
                 line-height: 2;
 
                 p {
                     max-width: 100%;
                     width: 100%;
                     color: $gray-600;
-                    
                 }
             }
 
@@ -197,20 +196,18 @@
                     padding-bottom: 20px;
                     padding-left: 10px;
                 }
+
                 @media (min-width: 768px) {
                     flex: 0 0 35%;
                     max-width: 35%;
                     order: 2;
                     padding: 10px;
-
                 }
 
                 img {
                     width: 100%;
                 }
             }
-
-            
         }
 
         // footer
@@ -222,16 +219,54 @@
 
             .pd-tabs-1-panels-card-footnote-label {
                 p {
-                    border-bottom: 3px solid #44687E; 
+                    border-bottom: 3px solid #44687E;
                     padding-bottom: 6px;
                 }
+
                 padding-right: 8px;
             }
-
         }
 
         hr {
             margin-bottom: 40px;
         }
+    }
+}
+
+.pd-tabs-1-style {
+    h2,
+    h3 {
+        font-weight: 700;
+        color: $gray-600;
+        padding-bottom: 10px;
+        position: relative;
+        font-size: 1.2rem;
+        margin-bottom: 24px;
+
+        &:after {
+            content: "";
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            width: 60px;
+            height: 3px;
+            border-bottom: 3px solid #44687E;
+        }
+    }
+
+    h4 {
+        text-decoration: underline;
+    }
+
+    h4,
+    h5 {
+        font-size: 1rem;
+        font-weight: 700;
+        color: $gray-600;
+    }
+
+    p {
+        color: $gray-600;
+        line-height: 2;
     }
 }
