Added in js for timeline length

--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -80,6 +80,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        
 
         .pd-tabs-1-timeline {
             width: 2px;
@@ -99,6 +100,7 @@
         @media (min-width: 768px) {
             max-width: 93%;
         }
+        // height: auto;
 
         // min-height: 300px;
         // background: #f2f2f2;
@@ -106,6 +108,7 @@
 
     .pd-tabs-1-panels-card {
         margin-bottom: 16px;
+        background: $gray-200;
 
         header {
             position: relative;
@@ -129,7 +132,8 @@
             .pd-tabs-1-panels-card-icon {
                 position: absolute;
                 left: -38px;
-                top: -4px;
+                // top: -4px;
+                top: 0px;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
@@ -137,16 +141,19 @@
                 padding: 6px;
                 border-radius: 50%;
                 background: #44687E;
+                opacity: 40%;
             }
 
             .pd-tabs-1-panels-card-circle {
                 position: absolute;
                 left: -25px;
-                top: 10px;
+                // top: 10px;
+                top: 0px;
                 width: 10px;
                 height: 10px;
                 background: #44687E;
                 border-radius: 50%;
+                opacity: 40%;
             }
 
             button {
