--- a/bootstrap_theme/pendigital/factory_tabs.scss
+++ b/bootstrap_theme/pendigital/factory_tabs.scss
@@ -307,3 +307,57 @@
         }
     }
 }
+
+.pd-tabs-1-accordion {
+
+    .accordion-item {
+        h2 {
+            .accordion-button {
+                color: $gray-800;
+                &:not(.collapsed) {
+                    background-color: $gray-200;
+                }
+            }
+        }
+    }
+
+
+    .accordion-body {
+        h2,
+        h3 {
+            font-weight: 700;
+            color: $gray-600;
+            padding-bottom: 10px;
+            position: relative;
+            font-size: 1.2rem;
+            margin-bottom: 24px;
+    
+            &:after {
+                content: "";
+                position: absolute;
+                bottom: 0px;
+                left: 0px;
+                width: 60px;
+                height: 3px;
+                border-bottom: 3px solid #44687E;
+            }
+        }
+    
+        h4 {
+            text-decoration: underline;
+        }
+    
+        h4,
+        h5 {
+            font-size: 1rem;
+            font-weight: 700;
+            color: $gray-600;
+        }
+    
+        p {
+            color: $gray-600;
+            line-height: 2;
+        }
+    }
+
+}
