--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -28,6 +28,12 @@ $secondary: #493bb3;
 
 // $info: #b53027;
 $info: #00CC66;
+$pd-oxford-blue: #00182E;
+$pd-bone: #E0DDCF;
+$pd-isaballine: #F1F0EA;
+
+// original
+$pd-ochre: #D17A22;
 
 // @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,300&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
