--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -1429,3 +1429,144 @@
         }
     }
 }
+
+
+
+.pd-cards-13 {
+    min-height: 800px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    .pd-cards-13-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        transition: opacity 0.4s;
+    }
+
+    .pd-cards-13-overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient(rgba(0, 24, 46, 0.95) 0%, rgba(0, 24, 46, 0.7) 40%, rgba(0, 24, 46, 0.7) 60%, rgba(0, 24, 46, 0.95) 100%);
+    }
+
+    .pd-cards-13-mask {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100px;
+        width: 100px;
+        overflow: hidden;
+
+        .pd-cards-13-circle-outer {
+            transition: transform 0.4s;
+            position: absolute;
+            right: -29px;
+            top: -28px;
+            width: 100px;
+            height: 100px;
+            background-color: $pd-bone;
+            border-radius: 50em;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .pd-cards-13-circle-inner {
+                width: 60px;
+                height: 60px;
+                border-radius: 50em;
+                background-color: $pd-ochre;
+                border: 2px solid $pd-ochre;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+
+                .pd-icon {
+                    width: 34px;
+                    height: 34px;
+                    fill: $white;
+                }
+            }
+        }
+    }
+
+    // anchor
+    .pd-cards-13-card-outer {
+        display: inline-block;
+        color: $white;
+        text-decoration: none;
+
+        .pd-cards-13-card-inner {
+            display: flex;
+            flex-direction: row;
+            justify-content: start;
+            align-items: center;
+            .pd-cards-13-image-outer {
+                position: relative;
+                overflow: hidden;
+                border-radius: 50em;
+                width: 120px;
+                height: 120px;
+                box-shadow: 4px 4px 16px 2px rgba(0,0,0,0.3);
+                border: 2px solid $pd-ochre;
+    
+                img {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+                    top: 0;
+                    left: 0;
+                    transition: transform 0.4s;
+                }
+            }
+    
+            .pd-cards-13-card-body {
+                display: flex;
+                flex-direction: column;
+                justify-content: start;
+                align-items: start;
+                padding-left: 20px;
+    
+                p {
+                    font-weight: 400;
+                    color: $white;
+                    font-size: 1rem;
+                    &:before {
+                        content: ">";
+                        margin-right: 8px;
+                    }
+                }
+            }
+        }
+
+        &:hover {
+            .pd-cards-13-card-inner { 
+                .pd-cards-13-image-outer {
+                    img {
+                        transform: scale(1.1);
+                    }
+                }
+            }
+
+        }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+
+    }
+
+}
