--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -1437,6 +1437,30 @@
     padding-top: 100px;
     padding-bottom: 100px;
 
+    .pd-intro-heading-sm {
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        display: inline-block;
+        padding-bottom: 4px;
+    }
+    
+    .pd-intro-heading-sm.pd-inverted {
+        color: $white;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+    }
+
+    .pd-subHeadline {
+        font-size: 1.3rem;
+        line-height: 1.8;
+        font-weight: 300;
+    }
+
     .pd-cards-13-image {
         width: 100%;
         height: 100%;
@@ -1538,6 +1562,10 @@
                 justify-content: start;
                 align-items: start;
                 padding-left: 20px;
+
+                h3 {
+                    font-weight: 700;
+                }
     
                 p {
                     font-weight: 400;
