--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -1230,7 +1230,175 @@
 
 // end pd-section-17
 
+// start pd-section-18
+.pd-section-18 {
+    position: relative;
+    background: $pd-isaballine;
+    padding-top: 100px;
+    padding-bottom: 100px;
 
+    .pd-intro-heading-sm {
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        display: inline-block;
+        padding-bottom: 4px;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-subHeadline {
+        font-size: 1.3rem;
+        line-height: 1.8;
+        font-weight: 300;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-border-left {
+        padding: 20px;
+        border-left: 2px solid $pd-ochre;
+    }
+
+    .pd-btn {
+        padding: 14px 30px;
+        color: white;
+        text-transform: uppercase;
+        background: transparent;
+        border: 2px solid $info;
+        transition: background 0.4s;
+        display: inline-block;
+        text-decoration: none;
+        letter-spacing: 0.15em;
+        font-weight: 700;
+        font-size: 0.9rem;
+    
+        .pd-icon {
+            fill: $white;
+        }
+    
+        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+        &:hover {
+            // background: darken($info, 10%);
+            background: $info;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+    
+        span {
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    }
+
+    .pd-btn.pd-inverted {
+        color: $pd-oxford-blue;
+        background: transparent;
+        border: 2px solid $pd-oxford-blue;
+    
+        .pd-icon {
+            fill: $pd-oxford-blue;
+        }
+    
+        &:hover {
+            background: $info;
+            border: 2px solid $pd-ochre;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $pd-ochre;
+            outline-offset: 4px;
+        }
+    }
+
+    .pd-section-18-mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100px;
+        width: 100px;
+        overflow: hidden;
+
+        .pd-section-18-circle-outer {
+            transition: transform 0.4s;
+            position: absolute;
+            left: -29px;
+            top: -28px;
+            width: 100px;
+            height: 100px;
+            background-color: $pd-bone;
+            border-radius: 50em;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .pd-section-18-circle-inner {
+                width: 60px;
+                height: 60px;
+                border-radius: 50em;
+                background-color: $pd-ochre;
+                border: 2px solid $pd-ochre;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+
+                .pd-icon {
+                    width: 34px;
+                    height: 34px;
+                    fill: $white;
+                }
+            }
+        }
+    }
+
+    .pd-section-18-image-outer {
+        @media screen and (max-width: 420px) {
+            min-height: 400px;
+        }
+
+        @media (min-width: 421px) {
+            min-height: 500px;
+        }
+
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: contain;
+            object-position: center center;
+            transform: scaleX(-1);
+        }
+    }
+}
+
+// end pd-section-18
 
 
 
