--- a/bootstrap_theme/pendigital/factory_call_to_actions.scss
+++ b/bootstrap_theme/pendigital/factory_call_to_actions.scss
@@ -253,6 +253,384 @@
 
 // end pd-CTA-5
 
+// start pd-CTA-6
+.pd-CTA-6 {
+    // border-top: 1px solid $pd-bone;
+    position: relative;
+    background-color: $pd-isaballine;
+
+    .pd-intro-heading-sm {
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        display: inline-block;
+        padding-bottom: 4px;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-border-left {
+        padding: 20px;
+        border-left: 2px solid $pd-ochre;
+    }
+
+    .pd-subHeadline {
+        font-size: 1.3rem;
+        line-height: 1.8;
+        font-weight: 300;
+    }
+
+    .pd-btn {
+        padding: 14px 30px;
+        color: white;
+        text-transform: uppercase;
+        background: transparent;
+        border: 2px solid $info;
+        transition: background 0.4s;
+        display: inline-block;
+        text-decoration: none;
+        letter-spacing: 0.15em;
+        font-weight: 700;
+        font-size: 0.9rem;
+    
+        .pd-icon {
+            fill: $white;
+        }
+    
+        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+        &:hover {
+            // background: darken($info, 10%);
+            background: $info;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+    
+        span {
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    }
+    
+    .pd-btn.pd-inverted {
+        color: $pd-oxford-blue;
+        background: transparent;
+        border: 2px solid $pd-oxford-blue;
+    
+        .pd-icon {
+            fill: $pd-oxford-blue;
+        }
+    
+        &:hover {
+            background: $info;
+            border: 2px solid $pd-ochre;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $pd-ochre;
+            outline-offset: 4px;
+        }
+    }
+    
+
+    .pd-CTA-6-mask {
+        position: absolute;
+        top: 0;
+        
+        height: 100px;
+        width: 100px;
+        overflow: hidden;
+
+        .pd-CTA-6-circle-outer {
+            transition: transform 0.4s;
+            position: absolute;
+            
+            top: -28px;
+            width: 100px;
+            height: 100px;
+            background-color: $pd-bone;
+            border-radius: 50em;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .pd-CTA-6-circle-inner {
+                width: 60px;
+                height: 60px;
+                border-radius: 50em;
+                background-color: $pd-ochre;
+                border: 2px solid $pd-ochre;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+
+                .pd-icon {
+                    width: 34px;
+                    height: 34px;
+                    fill: $white;
+                }
+            }
+        }
+    }
+
+    .pd-CTA-6-mask.pd-left {
+        left: 0;
+        .pd-CTA-6-circle-outer {
+            left: -29px;
+        }
+
+    }
+
+    .pd-CTA-6-mask.pd-right {
+        right: 0;
+        .pd-CTA-6-circle-outer {
+            right: -29px;
+        }
+    }
+
+    .pd-CTA-6-image-outer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+        height: 100%;
+
+        @media screen and (max-width: 991px) {
+            align-items: left;
+        }
+
+        @media (min-width: 992px) {
+            align-items: center;
+        }
+
+        img {
+            max-width: 160px;
+            // margin: 20px;
+        }
+
+    }
+
+    .pd-CTA-6-links-outer {
+
+        a {
+
+            @media screen and (max-width: 767px) {
+                display: block;
+                margin-bottom: 10px;
+            }
+
+            @media (min-width: 768px) {
+                dispay: inline-block;
+            }
+            
+            text-decoration: none;
+            font-weight: 700;
+            color: $pd-oxford-blue;
+
+            @media(min-width: 768px) {
+                &:not(:last-child):after {
+                    content: "|";
+                    padding-left: 20px;
+                    padding-right: 20px;
+                }
+
+            }
+
+
+            &:focus {
+                outline: 2px dotted $pd-oxford-blue;
+                outline-offset: 4px;
+            }
+        }
+
+    }
+
+}
+
+
+.pd-CTA-7 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    position: relative;
+    background: $pd-isaballine;
+
+    .pd-intro-heading-sm {
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        display: inline-block;
+        padding-bottom: 4px;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: $pd-oxford-blue;
+    }
+
+    .pd-subHeadline {
+        font-size: 1.3rem;
+        line-height: 1.8;
+        font-weight: 300;
+    }
+
+    .pd-border-left {
+        padding: 20px;
+        border-left: 2px solid $pd-ochre;
+    }
+
+    .pd-btn {
+        padding: 14px 30px;
+        color: white;
+        text-transform: uppercase;
+        background: transparent;
+        border: 2px solid $info;
+        transition: background 0.4s;
+        display: inline-block;
+        text-decoration: none;
+        letter-spacing: 0.15em;
+        font-weight: 700;
+        font-size: 0.9rem;
+    
+        .pd-icon {
+            fill: $white;
+        }
+    
+        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+        &:hover {
+            // background: darken($info, 10%);
+            background: $info;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+    
+        span {
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    }
+    
+    .pd-btn.pd-inverted {
+        color: $pd-oxford-blue;
+        background: transparent;
+        border: 2px solid $pd-oxford-blue;
+    
+        .pd-icon {
+            fill: $pd-oxford-blue;
+        }
+    
+        &:hover {
+            background: $info;
+            border: 2px solid $pd-ochre;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $pd-ochre;
+            outline-offset: 4px;
+        }
+    }
+
+    .pd-CTA-7-img {
+        border-radius: 50em;
+        width: 100px;
+    } 
+
+    
+
+    .pd-CTA-7-mask {
+        position: absolute;
+        top: 0;
+        
+        height: 100px;
+        width: 100px;
+        overflow: hidden;
+
+        .pd-CTA-7-circle-outer {
+            transition: transform 0.4s;
+            position: absolute;
+            
+            top: -28px;
+            width: 100px;
+            height: 100px;
+            background-color: $pd-bone;
+            border-radius: 50em;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .pd-CTA-7-circle-inner {
+                width: 60px;
+                height: 60px;
+                border-radius: 50em;
+                background-color: $pd-ochre;
+                border: 2px solid $pd-ochre;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+
+                .pd-icon {
+                    width: 34px;
+                    height: 34px;
+                    fill: $white;
+                }
+            }
+        }
+    }
+
+    .pd-CTA-7-mask.pd-left {
+        left: 0;
+        .pd-CTA-7-circle-outer {
+            left: -29px;
+        }
+
+    }
+
+    .pd-CTA-7-mask.pd-right {
+        right: 0;
+        .pd-CTA-7-circle-outer {
+            right: -29px;
+        }
+    }
+}
 
 
 
